--- a/src/Web/SunNext.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/Web/SunNext.Web/Views/Shared/_LoginPartial.cshtml
@@ -12,8 +12,14 @@
         </li>
         if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
         {
-            <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="Administration" asp-controller="Dashboard" asp-action="Index" title="Admin">Admin</a>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Admin
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="adminDropdown">
+                    <li><a class="dropdown-item" asp-area="Administration" asp-controller="Dashboard" asp-action="Overview">Overview</a></li>
+                    <li><a class="dropdown-item" asp-area="Administration" asp-controller="Dashboard" asp-action="Users">Manage Users</a></li>
+                </ul>
             </li>
         }
         <li class="nav-item">
