--- a/src/Web/SunNext.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/Web/SunNext.Web/Views/Shared/_LoginPartial.cshtml
@@ -2,39 +2,46 @@
 @using SunNext.Data.Models
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
 
 <ul class="navbar-nav">
     @if (this.SignInManager.IsSignedIn(this.User))
     {
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @this.User.Identity.Name!</a>
-        </li>
         if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
         {
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle text-white" href="#" id="adminDropdown" role="button"
+                   data-bs-toggle="dropdown" aria-expanded="false">
                     Admin
                 </a>
-                <ul class="dropdown-menu" aria-labelledby="adminDropdown">
-                    <li><a class="dropdown-item" asp-area="Administration" asp-controller="Dashboard" asp-action="Overview">Overview</a></li>
-                    <li><a class="dropdown-item" asp-area="Administration" asp-controller="Dashboard" asp-action="Users">Manage Users</a></li>
+                <ul class="dropdown-menu bg-dark" aria-labelledby="adminDropdown">
+                    <li><a class="dropdown-item text-white" asp-area="Administration" asp-controller="User"
+                           asp-action="AdminOverview">Overview</a></li>
+                    <li><a class="dropdown-item text-white" asp-area="Administration" asp-controller="User"
+                           asp-action="AdminUsers">Manage Users</a></li>
                 </ul>
             </li>
         }
+
         <li class="nav-item">
-            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@this.Url.Action("Index", "Home", new { area = string.Empty })">
-                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index"
+               title="Manage">
+                <i class="bi bi-person-circle me-1"></i> My Profile
+            </a>
+        </li>
+        <li class="nav-item">
+            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout"
+                  asp-route-returnUrl="@this.Url.Action("Index", "Home", new { area = string.Empty })">
+                <button type="submit" class="nav-link btn btn-link text-white">Logout</button>
             </form>
         </li>
     }
     else
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
+            <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Register">Register</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
+            <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Login">Login</a>
         </li>
     }
 </ul>
