--- a/src/Web/SunNext.Web/Views/Shared/_Navbar.cshtml
+++ b/src/Web/SunNext.Web/Views/Shared/_Navbar.cshtml
@@ -51,7 +51,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link text-white" asp-controller="Blog" asp-action="All">
-                        <i class="bi bi-journal-text me-1"></i> Blog
+                        <i class="bi bi-journal-text me-1"></i> News
                     </a>
                 </li>
 
