--- a/src/Web/SunNext.Web/Views/SolarAsset/Edit.cshtml
+++ b/src/Web/SunNext.Web/Views/SolarAsset/Edit.cshtml
@@ -1,11 +1,11 @@
 @model SunNext.Web.ViewModels.SolarAssets.SolarAssetFormModel
 @{
-    ViewData["Title"] = "Create New Asset";
+    ViewData["Title"] = "Edit Asset";
 }
 
 <div class="container py-5">
     <div class="glass-card p-4 shadow-lg">
-        <h2 class="text-center glow-text mb-4">⚡ Create New Solar Asset</h2>
+        <h2 class="text-center glow-text mb-4">⚡ Edit Asset</h2>
 
         <partial name="_FormPartial" model="Model" />
     </div>
