--- a/src/Web/SunNext.Web/Views/Shared/_Navbar.cshtml
+++ b/src/Web/SunNext.Web/Views/Shared/_Navbar.cshtml
@@ -24,31 +24,36 @@
                     </ul>
                 </li>
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-white" href="#" id="assetsDropdown" role="button" data-bs-toggle="dropdown">
-                        <i class="bi bi-hdd-stack me-1"></i> Assets
-                    </a>
-                    <ul class="dropdown-menu bg-dark border-0 mt-1">
-                        <li><a class="dropdown-item text-white" asp-controller="SolarAsset" asp-action="All">🌆 My Assets</a></li>
-                        <li><a class="dropdown-item text-white" asp-controller="SolarAsset" asp-action="Create">➕ Add Asset</a></li>
-                    </ul>
-                </li>
+                @{
+                    if (User.Identity.IsAuthenticated)
+                    {
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-white" href="#" id="assetsDropdown" role="button" data-bs-toggle="dropdown">
+                                <i class="bi bi-hdd-stack me-1"></i> Assets
+                            </a>
+                            <ul class="dropdown-menu bg-dark border-0 mt-1">
+                                <li><a class="dropdown-item text-white" asp-controller="SolarAsset" asp-action="All">🌆 My Assets</a></li>
+                                <li><a class="dropdown-item text-white" asp-controller="SolarAsset" asp-action="Create">➕ Add Asset</a></li>
+                            </ul>
+                        </li>
 
-                <li class="nav-item">
-                    <a class="nav-link text-white" asp-controller="Monitoring" asp-action="Index">
-                        <i class="bi bi-activity me-1"></i> Monitoring
-                    </a>
-                </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-controller="Monitoring" asp-action="Index">
+                                <i class="bi bi-activity me-1"></i> Monitoring
+                            </a>
+                        </li>
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-white" href="#" id="tradeDropdown" role="button" data-bs-toggle="dropdown">
-                        <i class="bi bi-graph-up-arrow me-1"></i> Trading
-                    </a>
-                    <ul class="dropdown-menu bg-dark border-0 mt-1">
-                        <li><a class="dropdown-item text-white" asp-controller="Trade" asp-action="Index">📈 Recommendations</a></li>
-                        <li><a class="dropdown-item text-white" asp-controller="Trade" asp-action="Targets">🎯 Targets</a></li>
-                    </ul>
-                </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-white" href="#" id="tradeDropdown" role="button" data-bs-toggle="dropdown">
+                                <i class="bi bi-graph-up-arrow me-1"></i> Trading
+                            </a>
+                            <ul class="dropdown-menu bg-dark border-0 mt-1">
+                                <li><a class="dropdown-item text-white" asp-controller="Trade" asp-action="Index">📈 Recommendations</a></li>
+                                <li><a class="dropdown-item text-white" asp-controller="Trade" asp-action="Targets">🎯 Targets</a></li>
+                            </ul>
+                        </li>
+                    }
+                }
                 <li class="nav-item dropdown">
                     <a class="nav-link text-white" asp-controller="Blog" asp-action="All">
                         <i class="bi bi-journal-text me-1"></i> News
