--- a/src/Web/SunNext.Web/Views/User/Admin/Overview.cshtml
+++ b/src/Web/SunNext.Web/Views/User/Admin/Overview.cshtml
@@ -58,7 +58,7 @@
     <a asp-controller="User" asp-action="AdminUsers" class="btn btn-outline-primary">
         <i class="bi bi-person-gear me-1"></i> Manage Users
     </a>
-    <a href="/SolarAsset" class="btn btn-outline-success">
+    <a asp-controller="SolarAsset" asp-action="AdminAll" class="btn btn-outline-success">
         <i class="bi bi-solar-panel me-1"></i> View Solar Assets
     </a>
     <a href="/Dashboard" class="btn btn-outline-info">
